# call_bot

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  bot.py  pyproject.toml  setup.sh
.gitlab/ci/: .gitlab-ci.yml
.helm/: Chart.yaml  values-prod.yaml
config/: __init__.py  config.py  dto.py  states.py
exceptions/: __init__.py  service.py
handlers/: commands.py  meetings.py  registration.py  start.py
keyboards/: __init__.py  callback_data.py  main.py
parser/: api_client.py  exceptions.py  models.py
services/: __init__.py  base.py  meetings.py  registration.py
tests/: conftest.py  test_bot.py
tests/test_api_client/: test_api_client.py
tests/test_meetings/: conftest.py  test_meetings.py
tests/test_registration/: test_registration.py
