[project]
name = "call-calendar-bot"
version = "0.1.0"
description = "Telegram bot for API communication"
requires-python = ">=3.13"
authors = ["Якомазов Алексей <arekabu@yandex.ru>"]
readme = "README.md"
dependencies = [
    "aiogram>=3.22.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-aiohttp>=1.1.0",
    "pytest-asyncio>=1.2.0",
]
lint = [
    "isort>=7.0.0",
    "pre-commit>=4.3.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff.lint]
extend-select = ["I", "N", "UP", "ANN"]
ignore = ["ANN101", "N818", "ANN401"]

[tool.ruff.lint.per-file-ignores]
"handlers/*.py" = ["ANN201", "ANN202"]
"tests/*.py" = ["ANN001", "ANN101", "ANN102", "ANN201", "ANN202"]
